--- a/index.html
+++ b/index.html
@@ -45,6 +45,54 @@
             </div>
 
         </div>
+
+        <div class="content">
+
+            <div class="card-header">
+                <div class="card card-small">
+                    <div class="card-content">
+                        <div class="card-info">
+                            <p>Personagens</p>
+                            <h2>42</h2>
+                        </div>
+                        <img src="/assets/personagens-black.svg" alt="Personagens">
+                    </div>
+                </div>
+
+                <div class="card card-large">
+                    <div class="card-container">
+                        <div class="card-content">
+                            <div class="card-info">
+                                <p>Luas</p>
+                                <h2>8</h2>
+                            </div>
+                            <img src="/assets/luas-black.svg" alt="Luas">
+                        </div>
+
+                        <div class="card-content">
+                            <div class="card-info">
+                                <p>Planetas</p>
+                                <h2>2</h2>
+                            </div>
+                            <img src="/assets/planetas-black.svg" alt="Planetas">
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="card card-small">
+                    <div class="card-content">
+                        <div class="card-info">
+                            <p>Naves</p>
+                            <h2>22</h2>
+                        </div>
+                        <img src="/assets/nave-black.svg" alt="Naves">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
 
