--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="card-content">
                         <div class="card-info">
                             <p>Personagens</p>
-                            <h2>42</h2>
+                            <h2 id="personagens"></h2>
                         </div>
                         <img src="/assets/personagens-black.svg" alt="Personagens">
                     </div>
@@ -64,7 +64,7 @@
                         <div class="card-content">
                             <div class="card-info">
                                 <p>Luas</p>
-                                <h2>8</h2>
+                                <h2 id="luas"></h2>
                             </div>
                             <img src="/assets/luas-black.svg" alt="Luas">
                         </div>
@@ -72,7 +72,7 @@
                         <div class="card-content">
                             <div class="card-info">
                                 <p>Planetas</p>
-                                <h2>2</h2>
+                                <h2 id="planetas"></h2>
                             </div>
                             <img src="/assets/planetas-black.svg" alt="Planetas">
                         </div>
@@ -84,7 +84,7 @@
                     <div class="card-content">
                         <div class="card-info">
                             <p>Naves</p>
-                            <h2>22</h2>
+                            <h2 id="naves"></h2>
                         </div>
                         <img src="/assets/nave-black.svg" alt="Naves">
                     </div>
@@ -95,6 +95,8 @@
 
     </div>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="scripts.js"></script>
 
     <script>
         feather.replace()
