--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
                 </div>
             </div>
 
+            <div class="table">
+                <table id="filmsTable">
+                    <thead>
+                        <tr>
+                            <th>Títulos</th>
+                            <th>Estréia</th>
+                            <th>Diretor</th>
+                            <th>Episódio</th>
+                        </tr>
+                    </thead>
+
+
+                    <thbody>
+                        <tr>
+                            <td>Filme</td>
+                        </tr>
+                    </thbody>
+                </table>
+            </div>
+
         </div>
 
     </div>
@@ -101,5 +121,6 @@
     <script>
         feather.replace()
       </script>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </body>
 </html>
