--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
             </div>
 
             <div class="table">
+
+                <h5>Últimos filmes</h5>
+                <p>Saiba os últimos lançamentos da marca</p>
+
                 <table id="filmsTable">
                     <thead>
                         <tr>
@@ -105,7 +109,7 @@
 
                     <thbody>
                         <tr>
-                            <td>Filme</td>
+                            <td></td>
                         </tr>
                     </thbody>
                 </table>
@@ -121,6 +125,7 @@
     <script>
         feather.replace()
       </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </body>
 </html>
