--- a/index.html
+++ b/index.html
@@ -91,33 +91,36 @@
                 </div>
             </div>
 
-            <div class="table">
+            <div class="content-info">
 
-                <h5>Últimos filmes</h5>
-                <p>Saiba os últimos lançamentos da marca</p>
+                <div class="table">
 
-                <table id="filmsTable">
-                    <thead>
-                        <tr>
-                            <th>Títulos</th>
-                            <th>Estréia</th>
-                            <th>Diretor</th>
-                            <th>Episódio</th>
-                        </tr>
-                    </thead>
+                    <h5>Últimos filmes</h5>
+                    <p>Saiba os últimos lançamentos da marca</p>
+
+                    <table id="filmsTable">
+                        <thead>
+                            <tr>
+                                <th>Títulos</th>
+                                <th>Estréia</th>
+                                <th>Diretor</th>
+                                <th>Episódio</th>
+                            </tr>
+                        </thead>
 
 
-                    <thbody>
-                        <tr>
-                            <td></td>
-                        </tr>
-                    </thbody>
-                </table>
-            </div>
+                        <thbody>
+                            <tr>
+                                <td></td>
+                            </tr>
+                        </thbody>
+                    </table>
+                </div>
+                
+                <div class="chart">
+                    <div id="piechart" style='width: 400px; height: 400px;'></div>
+                </div>
 
-            
-            <div class="chart">
-                <div id="piechart" style='width: 400px; height: 200px;'></div>
             </div>
 
         </div>
